tablegen-parser/src/snapshots/tablegen_parser__lexer__tests__bangoperator.snap
---
source: tablegen-parser/src/lexer.rs
expression: "tokenize(\"!concat !add !sub !mul !div !not !log2 !and !or !xor !sra !srl !shl !listconcat !listsplat !strconcat !interleave !substr !find !cast !subst !foreach !filter !foldl !head !tail !size !empty !if !cond !eq !isa !dag !ne !le !lt !ge !gt !setdagop !getdagop !exists !listremove !tolower !toupper !range !getdagarg !getdagname !setdagarg !setdagname\")"
---
[
    XConcat,
    Whitespace,
    XAdd,
    Whitespace,
    XSub,
    Whitespace,
    XMul,
    Whitespace,
    XDiv,
    Whitespace,
    XNot,
    Whitespace,
    Error,
    IntVal,
    Whitespace,
    XAnd,
    Whitespace,
    XOr,
    Whitespace,
    XXor,
    Whitespace,
    XSra,
    Whitespace,
    XSrl,
    Whitespace,
    XShl,
    Whitespace,
    XListConcat,
    Whitespace,
    XListSplat,
    Whitespace,
    XStrConcat,
    Whitespace,
    XInterleave,
    Whitespace,
    XSubstr,
    Whitespace,
    XFind,
    Whitespace,
    XCast,
    Whitespace,
    XSubst,
    Whitespace,
    XForEach,
    Whitespace,
    XFilter,
    Whitespace,
    XFoldl,
    Whitespace,
    XHead,
    Whitespace,
    XTail,
    Whitespace,
    XSize,
    Whitespace,
    XEmpty,
    Whitespace,
    XIf,
    Whitespace,
    XCond,
    Whitespace,
    XEq,
    Whitespace,
    XIsA,
    Whitespace,
    XDag,
    Whitespace,
    XNe,
    Whitespace,
    XLe,
    Whitespace,
    XLt,
    Whitespace,
    XGe,
    Whitespace,
    XGt,
    Whitespace,
    XSetDagOp,
    Whitespace,
    XGetDagOp,
    Whitespace,
    XExists,
    Whitespace,
    XListRemove,
    Whitespace,
    XToLower,
    Whitespace,
    XToUpper,
    Whitespace,
    XRange,
    Whitespace,
    XGetDagArg,
    Whitespace,
    XGetDagName,
    Whitespace,
    XSetDagArg,
    Whitespace,
    XSetDagName,
    Eof,
]
