tablegen-parser/src/snapshots/tablegen_parser__lexer__tests__block_comment.snap
---
source: tablegen-parser/src/lexer.rs
expression: "tokenize(\"/* hogefuga */42\")"
---
[
    BlockComment,
    IntVal,
    Eof,
]
