tablegen-parser/src/snapshots/tablegen_parser__lexer__tests__line_comment.snap
---
source: tablegen-parser/src/lexer.rs
expression: "tokenize(\"// hogefuga\\n42\")"
---
[
    LineComment,
    Whitespace,
    IntVal,
    Eof,
]
