tablegen-parser/src/snapshots/tablegen_parser__lexer__tests__literal.snap
---
source: tablegen-parser/src/lexer.rs
expression: "tokenize(\"true false 42 +42 -42 0xff 0b01\")"
---
[
    TrueVal,
    Whitespace,
    FalseVal,
    Whitespace,
    IntVal,
    Whitespace,
    IntVal,
    Whitespace,
    IntVal,
    Whitespace,
    IntVal,
    Whitespace,
    BinaryIntVal,
    Eof,
]
