tablegen-parser/src/snapshots/tablegen_parser__lexer__tests__number.snap
---
source: tablegen-parser/src/lexer.rs
expression: "tokenize(\"42\")"
---
[
    IntVal,
    Eof,
]
