tablegen-parser/src/snapshots/tablegen_parser__lexer__tests__preprocessor.snap
---
source: tablegen-parser/src/lexer.rs
expression: "tokenize(\"#ifdef #ifndef #else #endif #define\")"
---
[
    Ifdef,
    Whitespace,
    Ifndef,
    Whitespace,
    Else,
    Whitespace,
    Endif,
    Whitespace,
    Define,
    Eof,
]
