tablegen-parser/src/snapshots/tablegen_parser__lexer__tests__string.snap
---
source: tablegen-parser/src/lexer.rs
expression: "tokenize(r#\"hoge \"fuga\\n\\\"\" $piyo [{ foo }]\"#)"
---
[
    Id,
    Whitespace,
    StrVal,
    Whitespace,
    VarName,
    Whitespace,
    CodeFragment,
    Eof,
]
